--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -3,7 +3,7 @@
   display: inline-flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #f0f4f9;
+  background-color: var(--light-gray);
   padding: 25px 15px;
 }
 
@@ -12,9 +12,25 @@
 }
 
 .sidebar .menu {
-  display: block;
-  margin-left: 10px;
+  /* display: block; */
+  /* margin-left: 10px;  */
+  color: var(--ham-black);
+}
+.hamburger {
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
+  width: 40px;
+  padding: 10px;
+}
+.hamburger:hover {
+  background-color: var(--hover-side-back);
+}
+
+.bottom-icon {
+  color: var(--ham-black);
 }
 
 .sidebar .new-chat {
@@ -22,11 +38,11 @@
   display: inline-flex;
   align-items: center;
   gap: 10px;
-  padding: 10px 15px;
-  background-color: #e6eaf1;
+  padding: 10px;
+  background-color: var(--medium-gray);
   border-radius: 50px;
   font-size: 14px;
-  color: grey;
+  color: var(--gray);
   cursor: pointer;
 }
 
@@ -34,16 +50,25 @@
   display: flex;
   flex-direction: column;
   animation: fadeIn 1.5s;
+  /* color: ; */
 }
 
 .sidebar .recent-title {
   margin-top: 30px;
   margin-bottom: 20px;
+  color: var(--black);
 }
 
+.sidebar .recent-search {
+  color: var(--black);
+}
+
+.side-item {
+  color: var(--black);
+}
 .sidebar .recent-entry {
   display: flex;
-  align-items: start;
+  /* align-items: start; */
   gap: 10px;
   padding: 10px;
   padding-right: 40px;
@@ -52,8 +77,12 @@
   cursor: pointer;
 }
 
+.modeLight {
+  color: white;
+}
+
 .sidebar .recent-entry:hover {
-  background-color: #e2e6eb;
+  background-color: var(--hover-side-back);
 }
 
 .sidebar .bottom {
@@ -66,10 +95,8 @@
   cursor: pointer;
 }
 
-
-@media (max-width:600px){
-  .sidebar{
+@media (max-width: 600px) {
+  .sidebar {
     display: none;
-    
   }
 }
